# IOtoPDF

./: Dockerfile  LICENSE.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml  ruff.yml
app/: main.py
app/api/: api.py
app/schemas/: ats.py  resumeio.py
app/services/: ats.py  resumeio.py
scripts/: oracle-vm-setup.sh
templates/: index.html
tests/: test_ats.py
